# cxx_bzlmod_repro

./: .gitignore  MODULE.bazel  README
repo_patches/: add_rules_cc_to_cxx.patch
